<resources>
    <!--Strings Generales-->
    <string name="app_name">OSC</string>
    <string name="ver">Ver</string>
    <string name="title_activity_home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="required_image">Debes subir una imagen</string>
    <string name="uploading">Subiendo archivo…</string>
    <string name="error">Error</string>
    <string name="cancel">Cancelar</string>
    <string name="logout">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="simbolo_colones">₡</string>

    <!-- Splash Screen -->
    <string name="splash">Ordene su comida</string>

    <!--Strings del Login-->
    <string name="welcome_app">Bienvenido a \nOrdene Su Comida</string>
    <string name="email">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="signin">INICIAR SESIÓN</string>
    <string name="o">o</string>
    <string name="new_here">¿Nuevo en Ordene Su Comida?</string>
    <string name="signup">Regístrate aquí</string>

    <!--Strings del Registro-->
    <string name="register">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="nombre_soda">Nombre de la Soda</string>
    <string name="direccion">Dirección</string>
    <string name="num_telefonico">Número Telefónico</string>
    <string name="confirmar_ubic">Confirmar</string>
    <string name="cancelar_ubic">Cancelar</string>

    <!--Strings de Menu-->
    <string name="acerca_de">Acerca de</string>
    <string name="verVideo">Ver video</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <!--Strings de los Productos-->
    <string name="plato_del_dia">Plato del Día</string>
    <string name="productos">Productos</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="error_add_product">Error al agregar producto</string>
    <string name="product_added">Producto agregado</string>
    <string name="product_updated">Producto actualizado</string>
    <string name="activate_product">Producto disponible para hoy&#160;</string>

    <!--Strings de la Orden-->
    <string name="orden">Orden</string>
    <string name="order">Ordenar</string>
    <string name="your_order">Tu Orden</string>
    <string name="cash">Efectivo</string>
    <string name="total">Total</string>
    <string name="complete">Completar</string>

    <!--Strings de los Pedidos-->
    <string name="pedidos">Pedidos</string>
    <string name="pending">Pendiente</string>
    <string name="completed">Completado</string>

    <!--Strings Soda-->
    <string name="sodas">Sodas</string>

    <!--Strings Customer-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_data">Actualizar</string>
    <string name="contrasena_anterior">Contraseña Actual</string>
    <string name="nueva_contrasena">Contraseña nueva (opcional)</string>
    <string name="Nombre_soda">Nombre Soda</string>
    <string name="title_activity_maps">Map</string>


    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>

</resources>
