<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_black_24"
            android:drawableLeft="@drawable/baseline_person_black_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawableStart="@drawable/cash24"
                android:drawableLeft="@drawable/cash24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/cash" />

            <TextView
                android:id="@+id/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_warning_24dp"
                android:drawableLeft="@drawable/ic_warning_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/pending" />
        </TableRow>

    </LinearLayout>

    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/total"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>